objects/Nebula__LogEntryTag__c.object
<CustomObject>
    <fields>
        <fullName>Nebula__LogEntryOrigin__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>Nebula__LogEntry__r.Nebula__Origin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Entry Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LogEntryTimestamp__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>Nebula__LogEntry__r.Nebula__Timestamp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log Entry Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Nebula__LogEntry__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Log Entry</label>
        <referenceTo>Nebula__LogEntry__c</referenceTo>
        <relationshipLabel>Log Entry Tags</relationshipLabel>
        <relationshipName>LogEntryTags</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nebula__LogLink__c</fullName>
        <complianceGroup>None</complianceGroup>
        <formula>HYPERLINK(
  Nebula__LogEntry__r.Nebula__Log__c,
  Nebula__LogEntry__r.Nebula__Log__r.Name,
  &apos;_top&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__LoggedByUsernameLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>Nebula__LogEntry__r.Nebula__LoggedByUsernameLink__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__Tag__c</fullName>
        <complianceGroup>None</complianceGroup>
        <label>Logger Tag</label>
        <referenceTo>Nebula__LoggerTag__c</referenceTo>
        <relationshipLabel>Tagged Log Entries</relationshipLabel>
        <relationshipName>LogEntryTags</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nebula__UniqueId__c</fullName>
        <complianceGroup>None</complianceGroup>
        <description>An external ID field used to ensure that Log Entry Tag records are unique</description>
        <externalId>true</externalId>
        <inlineHelpText>An external ID field used to ensure that Log Entry Tag records are unique</inlineHelpText>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Log Entry Tag</label>
    <listViews>
        <fullName>Nebula__All</fullName>
        <columns>NAME</columns>
        <columns>Nebula__Tag__c</columns>
        <columns>Nebula__LogEntry__c</columns>
        <columns>Nebula__LogLink__c</columns>
        <columns>Nebula__LogEntryOrigin__c</columns>
        <columns>Nebula__LogEntryTimestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LET-{00000}</displayFormat>
        <label>Log Entry Tag Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Entry Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>